added a https out call in the canister for tests, it works

--- a/src/pattgen_frontend/src/index.html
+++ b/src/pattgen_frontend/src/index.html
@@ -28,6 +28,8 @@
         </div>
         <div class="arrow right" onclick="navigate('next')">&#8594;</div>
     </div>
+
+    <button id="testButton" onclick="window.location.href='index.php'">TEST</button>
 </body>
 
 </html>
