--- a/src/pattgen_frontend/src/index.html
+++ b/src/pattgen_frontend/src/index.html
@@ -29,7 +29,7 @@
         <div class="arrow right" onclick="navigate('next')">&#8594;</div>
     </div>
 
-    <button id="testButton" onclick="window.location.href='index.php'">TEST</button>
+    <button id="testButton">TEST</button>
 </body>
 
 </html>
