--- a/src/pattgen_frontend/src/index.html
+++ b/src/pattgen_frontend/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Audioprism - Mood</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -29,7 +29,13 @@
         <div class="arrow right" onclick="navigate('next')">&#8594;</div>
     </div>
 
+    <h3>Prompt: slow arctic death metal funky</h3>
     <button id="testButton">TEST</button>
+
+    <div id="player">
+        <span id="player_txt"></span>
+    </div>
+
 </body>
 
 </html>
