--- a/src/pattgen_frontend/src/index.html
+++ b/src/pattgen_frontend/src/index.html
@@ -29,12 +29,20 @@
         <div class="arrow right" onclick="navigate('next')">&#8594;</div>
     </div>
 
-    <h3>Prompt: slow arctic death metal funky</h3>
+    <h3>Prompt: french rap from marseille</h3>
     <button id="testButton">TEST</button>
 
     <div id="player">
         <span id="player_txt"></span>
     </div>
+
+    <div id="mintingSection">
+        <h2>Mint your NFT</h2>
+        <input type="text" id="icpAddressInput" placeholder="Enter ICP Address" value="dsav7-e6oig-u5mz7-inc7p-34jzq-cs4l7-md27e-2kawt-ayahu-a2664-3ae">
+        <button id="mintButton" disabled>MINT</button>
+        <div id="mintLoader" class="hidden"></div>
+    </div>
+
 
 </body>
 
